new regs and app

--- a/scripts/md/district-cntrls-sum.rmd
+++ b/scripts/md/district-cntrls-sum.rmd
@@ -8,6 +8,13 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(summarytools)
+
+repo.encrypt <- file.path("B:")
+
+
+# load data 
+load(file.path(repo.encrypt, "main/final_main_data_ipums.Rdata"))
+
 ```
 
 ## R Markdown
